# lattice-crypto

./: .gitignore  Cargo.toml  README.md  TASKS.md  book.toml
.github/workflows/: book.yml
benches/: trace_bench.rs
book/src/: SUMMARY.md  introduction.md
book/src/background/: cyclotomic-rings.md
book/src/concepts/: trace-computation.md
book/src/usage/: challenge-sampling.md  partially-splitting.md  trace-computation.md  trace-pairing.md
examples/: fiat_shamir_demo.rs
notes/: NOTES.md
src/: lib.rs
src/lattice/: matrix.rs  mod.rs  pairing.rs  splitting.rs  trace.rs  vector.rs
src/poly_commit/: mod.rs
src/zk/: fiat_shamir.rs  mod.rs  rejection_sampling.rs
