[package]
name = "lattice-crypto"
version = "0.1.0"
edition = "2021"
description = "A general-purpose library for lattice-based cryptography, including polynomial commitments and zero-knowledge proof support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lattice-crypto"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
log = "0.4"
ark-ff = "0.4"
itertools = "0.12"

[dev-dependencies]
rand_chacha = "0.3"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trace_bench"
harness = false

